--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -24,3 +24,9 @@ target_link_libraries(transformer_generate_example PUBLIC -lcublas -lcudart)
 target_link_libraries(transformer_generate_example PUBLIC transformer_model)
 target_link_libraries(transformer_generate_example PUBLIC ${Protobuf_LIBRARY})
 set_target_properties(transformer_generate_example PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
+
+add_executable(transformer_decoder_example decoder_example.cu.cc)
+target_link_libraries(transformer_decoder_example PUBLIC -lcublas -lcudart)
+target_link_libraries(transformer_decoder_example PUBLIC transformer_model)
+target_link_libraries(transformer_decoder_example PUBLIC ${Protobuf_LIBRARY})
+set_target_properties(transformer_decoder_example PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
