update path for compile images

--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -51,3 +51,5 @@ RUN apt-get update && \
     python3-setuptools \
     python3-wheel \
     && rm -rf /var/lib/apt/lists/*
+
+ENV PATH=/opt/common_tools:${PATH}
