--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -1,37 +1,7 @@
-# FROM hub.byted.org/base/lab.debian:latest
 FROM  quay.io/pypa/manylinux2014_x86_64
 
-# install cuda dev packages
-# RUN apt-get update && apt-get install -yq --no-install-recommends \
-#     gnupg2 curl ca-certificates && \
-#     curl -fsSL https://mirrors.aliyun.com/nvidia-cuda/ubuntu1804/x86_64/7fa2af80.pub | apt-key add - && \
-#     echo "deb https://mirrors.aliyun.com/nvidia-cuda/ubuntu1804/x86_64/ /" > /etc/apt/sources.list.d/cuda.list && \
-#     apt-get update && apt-get install -yq --no-install-recommends \
-#     cuda-cudart-11-0 \
-#     cuda-compat-11-0 \
-#     cuda-nvml-dev-11-0 \
-#     cuda-command-line-tools-11-0 \
-#     cuda-nvprof-11-0 \
-#     libnpp-dev-11-0 \
-#     cuda-libraries-dev-11-0 \
-#     cuda-minimal-build-11-0 \
-#     libcublas-dev-11-0 \
-#     libcusparse-11-0 \
-#     libcusparse-dev-11-0 \
-#     cuda-libraries-11-0 \
-#     libnpp-11-0 \
-#     cuda-nvtx-11-0 \
-#     libcublas-11-0 \
-#     && ln -s cuda-11.0 /usr/local/cuda && \
-#     rm -rf /var/lib/apt/lists/*
 
-RUN \
-    # yum upgrade -y && yum install -y \
-    # gnupg2 curl ca-certificates && \
-    # NVIDIA_GPGKEY_SUM=d1be581509378368edeec8c1eb2958702feedf3bc3d17011adbf24efacce4ab5 && \
-    # curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/7fa2af80.pub | sed '/^Version/d' > /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA && \
-    # echo "$NVIDIA_GPGKEY_SUM  /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA" | sha256sum -c --strict  - && \
-    yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/cuda-rhel7.repo &&\
+RUN yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/cuda-rhel7.repo &&\
     yum install -y \
     cuda-libraries-11-0-11.0.3-1 \
     cuda-nvtx-11-0-11.0.167-1 \
