--- a/pywrapper/CMakeLists.txt
+++ b/pywrapper/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.18)
 
-pybind11_add_module(pyseqlib MODULE transformer_decoder.cc.cu)
-target_link_libraries(pyseqlib PUBLIC transformer_model)
+pybind11_add_module(lightseq MODULE transformer_decoder.cc.cu)
+target_link_libraries(lightseq PUBLIC transformer_model)
