--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = 3rdparty/pybind11
 	url = https://github.com/pybind/pybind11.git
 	branch = stable
+[submodule "3rdparty/cub"]
+	path = 3rdparty/cub
+	url = https://github.com/NVIDIA/cub.git
