--- a/pywrapper/CMakeLists.txt
+++ b/pywrapper/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.18)
 
 pybind11_add_module(lightseq MODULE wrapper.cc)
 target_link_libraries(lightseq PUBLIC transformer_model)
+target_link_libraries(lightseq PUBLIC gpt_model)
