--- a/lightseq/training/examples/deepspeed/deepspeed_config.json
+++ b/lightseq/training/examples/deepspeed/deepspeed_config.json
@@ -1,28 +1,29 @@
 {
-  "train_batch_size": 64,
-  "micro_batch_per_gpu": 32,
+  "train_micro_batch_size_per_gpu": 8192,
   "optimizer": {
     "type": "AdamW",
     "params": {
       "lr": 5e-4,
-      "betas": [0.9, 0.98],
+      "betas": [
+        0.9,
+        0.98
+      ],
       "eps": 1e-8,
       "weight_decay": 0.0001,
       "torch_adam": false
-     }
+    }
   },
- "scheduler": {
-      "type": "WarmupDecayLR",
-      "params": {
-          "warmup_num_steps": 4000,
-          "warmup_min_lr": 0,
-          "warmup_max_lr": 5e-4,
-          "total_num_steps": 1000000
-      }
+  "scheduler": {
+    "type": "WarmupDecayLR",
+    "params": {
+      "warmup_num_steps": 4000,
+      "warmup_min_lr": 0,
+      "warmup_max_lr": 5e-4,
+      "total_num_steps": 1000000
+    }
   },
   "gradient_clipping": 0.0,
   "wall_clock_breakdown": false,
-
   "fp16": {
     "enabled": true,
     "loss_scale": 0,
