--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -22,7 +22,7 @@ jobs:
       - name: install pre-commit
         run: |
           pip install pre-commit
-          sudo apt-get update && sudo apt-get install clang-format
+          sudo apt-get update && sudo apt-get install -y --no-install-recommends clang-format
 
       # Runs a set of commands using the runners shell
       - name: check format
