update pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     rev: 0.8.0
     hooks:
       - id: clang-format # formatter of C/C++ code based on a style guide: LLVM, Google, Chromium, Mozilla, and WebKit available
-        args: []
+        args: [-style=file]
 
   - repo: https://github.com/psf/black
     rev: 21.5b2
