--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -27,4 +27,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: check format
         run: |
-          pre-commit run -a
+          pre-commit run -a --show-diff-on-failure
