--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -22,7 +22,7 @@ jobs:
       - name: install pre-commit
         run: |
           pip install pre-commit
-          sudo apt-get install -y --no-install-recommends clang-format-7
+          sudo apt-get install -y --no-install-recommends clang-format
           clang-format --version
 
       # Runs a set of commands using the runners shell
