--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -29,3 +29,15 @@ jobs:
       - name: check format
         run: |
           pre-commit run -a --show-diff-on-failure
+
+  build_wheel:
+    runs-on: ubuntu-latest
+    container: taka23/lightseq:build-linux
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - name: build wheel
+        run: |
+          python3 -m pip install -U build
+          python3 -m build
