--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "3rdparty/cub"]
 	path = 3rdparty/cub
 	url = https://github.com/NVIDIA/cub.git
+[submodule "3rdparty/hdf5"]
+	path = 3rdparty/hdf5
+	url = https://github.com/HDFGroup/hdf5.git
+	branch = 1.12/master
