--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -36,7 +36,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-        with: 
+        with:
           submodules: 'recursive'
       - name: env check
         run: |
@@ -45,4 +45,17 @@ jobs:
         run: |
           /opt/python/cp38-cp38/bin/python -m pip install -U build
           /opt/python/cp38-cp38/bin/python -m build
+          
+  build_inference:
+    runs-on: ubuntu-latest
+    container: taka23/lightseq:build-linux
+
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          submodules: 'recursive'
+      - name: env check
+        run: |
+          /opt/python/cp38-cp38/bin/python -V
+      - name: build ext
           /opt/python/cp38-cp38/bin/python setup.py build_ext
