--- a/proto/CMakeLists.txt
+++ b/proto/CMakeLists.txt
@@ -13,14 +13,14 @@ protobuf_generate_cpp(TRANSFORMER_PROTO_SRC TRANSFORMER_PROTO_HEADER
 add_library(gpt_weight STATIC gpt_weight.cc ${GPT_PROTO_SRC}
                               ${GPT_PROTO_HEADER})
 target_link_libraries(gpt_weight PUBLIC utils ${Protobuf_LIBRARIES})
+target_link_libraries (gpt_weight PRIVATE ${HDF5_LIB_TARGET})
+target_include_directories (gpt_weight PRIVATE "${HDF5_SRC_DIR};${HDF5_BINARY_DIR};$<$<BOOL:${HDF5_ENABLE_PARALLEL}>:${MPI_C_INCLUDE_DIRS}>")
 target_include_directories(gpt_weight INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(gpt_weight INTERFACE ${CMAKE_CURRENT_BINARY_DIR})
 
-add_library(
-  transformer_weight STATIC transformer_weight.cc ${TRANSFORMER_PROTO_SRC}
-                            ${TRANSFORMER_PROTO_HEADER})
+add_library(transformer_weight STATIC transformer_weight.cc ${TRANSFORMER_PROTO_SRC} ${TRANSFORMER_PROTO_HEADER})
 target_link_libraries(transformer_weight PUBLIC utils ${Protobuf_LIBRARIES})
-target_include_directories(transformer_weight
-                           INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories(transformer_weight
-                           INTERFACE ${CMAKE_CURRENT_BINARY_DIR})
+target_link_libraries (transformer_weight PRIVATE ${HDF5_LIB_TARGET})
+target_include_directories (transformer_weight PRIVATE "${HDF5_SRC_DIR};${HDF5_BINARY_DIR};$<$<BOOL:${HDF5_ENABLE_PARALLEL}>:${MPI_C_INCLUDE_DIRS}>")
+target_include_directories(transformer_weight INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(transformer_weight INTERFACE ${CMAKE_CURRENT_BINARY_DIR})
