--- a/lightseq/inference/model/CMakeLists.txt
+++ b/lightseq/inference/model/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(transformer_model STATIC ${transformer_files})
 target_link_libraries(transformer_model PUBLIC cuda_kernels)
 target_link_libraries(transformer_model PUBLIC transformer_weight)
 target_link_libraries(transformer_model PUBLIC CUDA::cublas_static CUDA::cublasLt_static)
+target_include_directories(transformer_model INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 set_target_properties(transformer_model PROPERTIES CUDA_SEPARABLE_COMPILATION
                                                    ON)
 
@@ -13,4 +14,5 @@ add_library(gpt_model STATIC gpt_encoder.cc.cu)
 target_link_libraries(gpt_model PUBLIC cuda_kernels)
 target_link_libraries(gpt_model PUBLIC gpt_weight)
 target_link_libraries(gpt_model PUBLIC CUDA::cublas_static CUDA::cublasLt_static)
+target_include_directories(gpt_model INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 set_target_properties(gpt_model PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
