--- a/examples/inference/cpp/CMakeLists.txt
+++ b/examples/inference/cpp/CMakeLists.txt
@@ -10,8 +10,15 @@ add_executable(gptlm_example gptlm_example.cc.cu)
 target_link_libraries(gptlm_example PUBLIC gpt_model)
 set_target_properties(gptlm_example PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
+# add_executable(transformer_example transformer_example.cc.cu)
+# target_link_libraries(transformer_example PUBLIC transformer_model)
+# set_target_properties(transformer_example PROPERTIES CUDA_SEPARABLE_COMPILATION
+#                                                      ON)
+
 add_executable(transformer_example transformer_example.cc.cu)
-target_link_libraries(transformer_example PUBLIC transformer_model)
+target_link_libraries(transformer_example PUBLIC lightseq )
+# target_compile_options(transformer_example BEFORE PUBLIC -forward-unknown-to-host-compiler)
+# target_include_directories(transformer_example PRIVATE ${PYBIND11_INCLUDE_DIR} PRIVATE ${pybind11_INCLUDE_DIR} PRIVATE ${PYTHON_INCLUDE_DIRS})
 set_target_properties(transformer_example PROPERTIES CUDA_SEPARABLE_COMPILATION
                                                      ON)
 
