--- a/lightseq/inference/pywrapper/CMakeLists.txt
+++ b/lightseq/inference/pywrapper/CMakeLists.txt
@@ -1,7 +1,14 @@
 cmake_minimum_required(VERSION 3.18)
 
-pybind11_add_module(lightseq MODULE wrapper.cc)
-target_link_libraries(lightseq PUBLIC transformer_model)
-target_link_libraries(lightseq PUBLIC gpt_model)
-target_link_libraries(lightseq PUBLIC bert_model)
-set_target_properties(lightseq PROPERTIES OUTPUT_NAME lightseq/inference)
+if(BUILD_PYTHON)
+    pybind11_add_module(lightseq MODULE wrapper.cc)
+    target_link_libraries(lightseq PUBLIC transformer_model)
+    target_link_libraries(lightseq PUBLIC gpt_model)
+    target_link_libraries(lightseq PUBLIC bert_model)
+    set_target_properties(lightseq PROPERTIES OUTPUT_NAME lightseq/inference)
+else()
+    add_library(lightseq SHARED transformer.cc.cu)
+    target_link_libraries(lightseq PUBLIC transformer_model)
+    target_include_directories(lightseq INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+endif()
