--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,26 @@ find_package(CUDA 10.1 REQUIRED)
 
 option(FP16_MODE "inference with fp16" OFF)
 option(DEBUG_MODE "debug computation result" OFF)
+option(BUILD_PYTHON "build for python api" OFF)
+option(DYNAMIC_API "build dynamic lightseq api library" OFF)
 
-set(Protobuf_USE_STATIC_LIBS ON)
+if(FP16_MODE)
+  add_compile_definitions(FP16_MODE)
+  message(STATUS "Build using fp16 precision")
+else()
+  message(STATUS "Build using fp32 precision")
+endif()
+
+if(DEBUG_MODE)
+  add_compile_definitions(DEBUG_RESULT)
+  message(STATUS "Debug computation result")
+endif()
+
+if(BUILD_PYTHON)
+  add_compile_definitions(ENABLE_PYTHON)
+  set(DYNAMIC_API OFF)
+  message(STATUS "Build for python wrapper")
+endif()
 
 set(CUDA_PATH ${CUDA_TOOLKIT_ROOT_DIR})
 list(APPEND CMAKE_MODULE_PATH ${CUDA_PATH}/lib64)
@@ -16,18 +34,26 @@ list(APPEND CMAKE_MODULE_PATH ${CUDA_PATH}/lib64)
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -O0")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -O0")
 set(CMAKE_CUDA_FLAGS_DEBUG "${CMAKE_CUDA_FLAGS_DEBUG} -g -G -Xcompiler -Wall")
-set(CMAKE_CUDA_RUNTIME_LIBRARY "Static")
+
+if(DYNAMIC_API)
+  # dynamic link to cuda libraries and protobuf
+  set(CMAKE_CUDA_RUNTIME_LIBRARY "Shared")
+  set(Protobuf_USE_STATIC_LIBS OFF)
+else()
+  # static link to cuda libraries and protobuf
+  set(CMAKE_CUDA_RUNTIME_LIBRARY "Static")
+  set(Protobuf_USE_STATIC_LIBS ON)
+endif()
+
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
-set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION OFF)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
-set(CMAKE_CUDA_FLAGS_RELEASE
-    "${CMAKE_CUDA_FLAGS_RELEASE} -Xcompiler -O2")
+set(CMAKE_CUDA_FLAGS_RELEASE "${CMAKE_CUDA_FLAGS_RELEASE} -Xcompiler -O2")
 
 set(COMMON_HEADER_DIRS ${PROJECT_SOURCE_DIR} ${CUDA_PATH}/include)
 set(COMMON_LIB_DIRS ${CUDA_PATH}/lib64)
@@ -35,23 +61,6 @@ set(COMMON_LIB_DIRS ${CUDA_PATH}/lib64)
 include_directories(${COMMON_HEADER_DIRS})
 
 link_directories(${COMMON_LIB_DIRS})
-
-if(FP16_MODE)
-    add_definitions(-DFP16_MODE)
-    message(STATUS "Build using fp16 precision")
-else()
-    message(STATUS "Build using fp32 precision")
-endif()
-
-if(DEBUG_MODE)
-    add_definitions(-DDEBUG_RESULT)
-    message(STATUS "Debug computation result")
-endif()
-
-if(BUILD_PYTHON)
-    add_definitions(-DENABLE_PYTHON)
-    message(STATUS "Build for python wrapper")
-endif()
 
 add_subdirectory(3rdparty/pybind11)
 add_subdirectory(lightseq/inference/kernels)
@@ -62,5 +71,5 @@ add_subdirectory(lightseq/inference/pywrapper)
 add_subdirectory(lightseq/inference/server)
 
 if(NOT BUILD_PYTHON)
-    add_subdirectory(examples/inference/cpp)
+  add_subdirectory(examples/inference/cpp)
 endif()
