--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,10 +39,12 @@ if(DYNAMIC_API)
   # dynamic link to cuda libraries and protobuf
   set(CMAKE_CUDA_RUNTIME_LIBRARY "Shared")
   set(Protobuf_USE_STATIC_LIBS OFF)
+  set(HDF5_USE_STATIC_LIBRARIES OFF)
 else()
   # static link to cuda libraries and protobuf
   set(CMAKE_CUDA_RUNTIME_LIBRARY "Static")
   set(Protobuf_USE_STATIC_LIBS ON)
+  set(HDF5_USE_STATIC_LIBRARIES ON)
 endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
