C++ API add model base

--- a/lightseq/inference/pywrapper/CMakeLists.txt
+++ b/lightseq/inference/pywrapper/CMakeLists.txt
@@ -7,7 +7,8 @@ if(BUILD_PYTHON)
   target_link_libraries(lightseq PUBLIC transformer_model)
   set_target_properties(lightseq PROPERTIES OUTPUT_NAME lightseq/inference)
 else()
-  add_library(lightseq SHARED transformer.cc gpt.cc bert.cc)
+  # add_library(lightseq SHARED transformer.cc gpt.cc bert.cc)
+  add_library(lightseq SHARED transformer.cc)
   target_link_libraries(lightseq PUBLIC transformer_model)
   target_link_libraries(lightseq PUBLIC gpt_model)
   target_link_libraries(lightseq PUBLIC bert_model)
