--- a/lightseq/inference/tools/CMakeLists.txt
+++ b/lightseq/inference/tools/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
+find_package(CUDAToolkit)
 # load HDF5 package
 set(HDF5_USE_STATIC_LIBRARIES ON)
 # (default) use C API for HDF5 library
@@ -9,3 +10,4 @@ add_library(utils STATIC util.cc.cu)
 target_include_directories(utils PUBLIC ${HDF5_INCLUDE_DIRS})
 target_include_directories(utils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(utils PRIVATE ${HDF5_LIBRARIES})
+target_link_libraries(utils PUBLIC CUDA::cublas_static CUDA::cublasLt_static)
