--- a/examples/inference/cpp/CMakeLists.txt
+++ b/examples/inference/cpp/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.18)
 
 add_executable(transformer_example transformer_example.cc)
-target_link_libraries(transformer_example PUBLIC lightseq)
+target_link_libraries(transformer_example PUBLIC liblightseq)
 
 add_executable(bert_example bert_example.cc)
-target_link_libraries(bert_example PUBLIC lightseq)
+target_link_libraries(bert_example PUBLIC liblightseq)
 
 add_executable(gpt_example gpt_example.cc)
-target_link_libraries(gpt_example PUBLIC lightseq)
+target_link_libraries(gpt_example PUBLIC liblightseq)
 
 add_executable(transformer_decoder_example decoder_example.cc.cu)
 target_link_libraries(transformer_decoder_example PUBLIC transformer_model)
