Refactor lightseq inference cpp api (#255)
* cpp api dev

* transformer example support cpp api

* Fix python wrapper build

* GPT and Bert add cpp api

* fix inference build with cuda 11

* Add hdf5 to dynamic api

* Fix transformer infer on hdf5

* Cpp api add getter of max_step

* Cpp cpi add getter of max_step

* C++ API add model base

* Force protobuf static link

* remove malloc of input and output

* Refactor gpt and bert to model_base api

* Add max input shape getter

* Add dtype getter

* gpt sampling_method bug and some renaming

* Fix index overflow in gpt ppl

* Fix ppl length denominator

* CPP API support multilingual transformer

* Remove extra lang_ids

* Add lang ids split

* Refactor python api using new cpp api

* Remove redundant O2

* Fixed to example

* format fix

* remove comments

--- a/lightseq/inference/model/CMakeLists.txt
+++ b/lightseq/inference/model/CMakeLists.txt
@@ -5,21 +5,33 @@ set(transformer_files decoder.cc.cu encoder.cc.cu)
 add_library(transformer_model STATIC ${transformer_files})
 target_link_libraries(transformer_model PUBLIC cuda_kernels)
 target_link_libraries(transformer_model PUBLIC transformer_weight)
-target_link_libraries(transformer_model PUBLIC CUDA::cublas_static CUDA::cublasLt_static)
-target_include_directories(transformer_model INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-set_target_properties(transformer_model PROPERTIES CUDA_SEPARABLE_COMPILATION
-                                                   ON)
+if(DYNAMIC_API)
+  target_link_libraries(transformer_model PRIVATE CUDA::cublas CUDA::cublasLt)
+else()
+  target_link_libraries(transformer_model PRIVATE CUDA::cublas_static
+                                                  CUDA::cublasLt_static)
+endif()
+
+target_include_directories(transformer_model PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(gpt_model STATIC gpt_encoder.cc.cu)
 target_link_libraries(gpt_model PUBLIC cuda_kernels)
 target_link_libraries(gpt_model PUBLIC gpt_weight)
-target_link_libraries(gpt_model PUBLIC CUDA::cublas_static CUDA::cublasLt_static)
-target_include_directories(gpt_model INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-set_target_properties(gpt_model PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+if(DYNAMIC_API)
+  target_link_libraries(gpt_model PRIVATE CUDA::cublas CUDA::cublasLt)
+else()
+  target_link_libraries(gpt_model PRIVATE CUDA::cublas_static
+                                          CUDA::cublasLt_static)
+endif()
+
+target_include_directories(gpt_model PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(bert_model STATIC bert_encoder.cc.cu)
 target_link_libraries(bert_model PUBLIC cuda_kernels)
 target_link_libraries(bert_model PUBLIC bert_weight)
-target_link_libraries(bert_model PUBLIC CUDA::cublas_static
-                                        CUDA::cublasLt_static)
-set_target_properties(bert_model PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+if(DYNAMIC_API)
+  target_link_libraries(bert_model PRIVATE CUDA::cublas CUDA::cublasLt)
+else()
+  target_link_libraries(bert_model PRIVATE CUDA::cublas_static
+                                           CUDA::cublasLt_static)
+endif()
